# video-web

./: .gitignore  MongoDB_man  README.md  openCV_man
application/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  authorizationDecorator.cpp  authorizationDecorator.h  authorizationHandler.cpp  authorizationHandler.h  diskStorage.cpp  diskStorage.h  documentStorage.cpp  documentStorage.h  fetchVideoHandler.cpp  fetchVideoHandler.h  loadMediaHandler.cpp  loadMediaHandler.h  loginHandler.cpp  loginHandler.h  main.cpp  mediaProcessor.cpp  mediaProcessor.h  notFoundHandler.h  pageHandler.cpp  pageHandler.h  registrationHandler.cpp  registrationHandler.h  uploadVideoHandler.cpp  uploadVideoHandler.h  user.cpp  user.h  video.cpp  video.h
application/.cache/clangd/index/: authorizationDecorator.cpp.69D516991A29E207.idx  authorizationDecorator.h.6BFCD6BB10C348A5.idx  authorizationHandler.cpp.083067CB114A3BF6.idx  authorizationHandler.h.A373A03E0B827C8E.idx  authorizationProvider.cpp.E2B305F85B99477E.idx  authorizationProvider.h.269A40AEA74348D0.idx  base.h.1202FF9C7757CCF6.idx  buffers.cpp.C7969E8AD1BFA552.idx  buffers.h.D278ECD6D9D7458A.idx  defaults.h.D8F71D7178F380F3.idx  diskStorage.cpp.DEF4A34F86D26D2D.idx  diskStorage.h.785578361B650BA2.idx  documentStorage.cpp.FBFA5F90A3488186.idx  documentStorage.h.80C481FCD1235413.idx  fetchVideoHandler.cpp.8DCBF0878BA8C1E3.idx  fetchVideoHandler.h.22222CCDD4185443.idx  formdata_handler.cpp.96DDF17B92A1CF83.idx  formdata_handler.h.6A7822B44D90AC91.idx  formdata_parser.cpp.9255F4F69C6885AD.idx  formdata_parser.h.45E737B4C6F9A5F7.idx  http_server_multithread.cpp.CB129FCCB2E989F9.idx  http_server_multithread.h.8BE2604D134FC376.idx  http_session.cpp.E92A995A121450F6.idx  http_session.h.3382D5DD38719796.idx  jwt.h.7D412F3ECE1CECA6.idx  loadMediaHandler.cpp.2AAF250304935740.idx  loadMediaHandler.h.B859279A86546278.idx  main.cpp.463167FD86A1F55D.idx  mediaProcessor.cpp.44C7F1D947BC4F25.idx  mediaProcessor.h.81C2774859CCDCA0.idx  net_defs.cpp.51A66AC730678873.idx  net_defs.h.5467A9EFA4360CC5.idx  tcp_server_multithread.cpp.2DE6691A6E558838.idx  tcp_server_multithread.h.8804733F113F697E.idx  tcp_session.cpp.FA54ED52FFD89BF0.idx  tcp_session.h.9C5634AEC66895ED.idx  traits.h.D4F791ACCEDFD0F9.idx  uploadVideoHandler.cpp.84D2424B83494FE4.idx  uploadVideoHandler.h.1123DAED70935052.idx  utils.h.434190EEF5B63D31.idx  (+2 more)
application/AuthorizationService/: authorizationErrors.h  authorizationProvider.cpp  authorizationProvider.h  cookie.h  utils.h
application/DiskStorage/: diskStorage.cpp  diskStorage.h  error.h
application/DocumentStorage/: clientOperation.h  documentStorage.cpp  documentStorage.h
application/DocumentStorage/convertors/: common.h  filters.h  stream.h  subject.h  user.h  video.h
application/Pool/: poolAllocator.h  pooledBuffers.h
application/Server/: .gitignore  CMakeLists.txt  Makefile  base_session.h  cmake_install.cmake  endpoint.cpp  endpoint.h  http_server_multithread.cpp  http_server_multithread.h  http_session.cpp  http_session.h  main.cpp  net_defs.cpp  net_defs.h  tcp_server_multithread.cpp  tcp_server_multithread.h  tcp_session.cpp  tcp_session.h
application/Server/Buffers/: buffers.cpp  buffers.h
application/Server/Cookie/: cookie.cpp  cookie.h  exceptions.h  utils.h
application/Server/FormData/: exceptions.h  formdata_handler.cpp  formdata_handler.h  formdata_parser.cpp  formdata_parser.h
application/Server/http/: http_exceptions.h  http_handlers.h  http_server_multithread.cpp  http_server_multithread.h  http_session.cpp  http_session.h
application/common/: formUtils.h
application/form/: editProfileForm.cpp  editProfileForm.h  formExceptions.h  formUtils.h  loginForm.cpp  loginForm.h  registrationForm.cpp  registrationForm.h  streamForm.cpp  streamForm.h  uploadVideoForm.cpp  uploadVideoForm.h
application/handlers/: authorizationHandler.cpp  authorizationHandler.h  fetchStreamHandler.cpp  fetchStreamHandler.h  fetchUserHandler.cpp  fetchUserHandler.h  fetchVideoHandler.cpp  loadMediaHandler.cpp  loadMediaHandler.h  loginHandler.cpp  loginHandler.h  pageHandler.h  publishStreamHandler.cpp  publishStreamHandler.h  registrationHandler.cpp  registrationHandler.h  uploadVideoHandler.h
application/privateHandlers/: createStreamHandler.cpp  createStreamHandler.h  deleteVideoHandler.cpp  deleteVideoHandler.h  editProfileHandler.cpp  editProfileHandler.h  pageHandler.cpp  pageHandler.h  profileHandler.cpp  profileHandler.h  streamHandler.cpp  streamHandler.h  uploadVideoHandler.cpp  uploadVideoHandler.h
application/resource/: filters.h  stream.cpp  stream.h  subject.cpp  subject.h  timeUtils.cpp  timeUtils.h  user.cpp  user.h  utils.h  video.cpp  video.h
application/utils/: utils.h
frontend/: channel.html  channelEl.js  channelLib.js  container.html  container.js  elements.js  login.html  main.html  main.js  player.html  player.js  profile.html  registration.html  upload.html  upload.js  utils.js
frontend/components/: channelCard.js  fileUploadInput.js  streamUploadForm.js  universalPlayer.js  videoCard.js  videoUploadForm.js
frontend/misc/: general.html
frontend/private/: editprofile.html  editprofile.js  profile.html  stream.html  upload.html  upload.js
frontend/scripts/: loadVideoFeed.js
frontend/styles/: formStyles.css
nginx/: file_server.conf  streaming_server.conf
